--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,9 @@ combine-as-imports = true
 [tool.ruff.lint.per-file-ignores]
 "setup.py" = ["I"]
 
+[tool.pytest.ini_options]
+python_files = ["tests/*.py", "tests/**/*.py"]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
